<resources>
    <string name="app_name">Automastic Home</string>

    <!-- Fragment titles - MainFeature -->
    <string name="fragment_title_centralnodeslist">Mis lugares</string>
    <string name="fragment_title_remotenodeslist">Mis dispositivos</string>
    <string name="fragment_title_nodeactuator">Actuador</string>
    <string name="fragment_title_nodesensor">Sensor</string>
    <string name="fragment_title_remotenodeedit">Editar dispositivo</string>
    <string name="fragment_title_centralnodeedit">Editar nodo central</string>
    <string name="fragment_title_connecttocentral">Conectar con nodo central</string>
    <string name="fragment_title_controlslist">Controles automaticos</string>
    <string name="fragment_title_controledit">Editar control automatico</string>


    <!-- SignInFragment layout strings -->
    <string name="fragment_signin_username">Usuario</string>
    <string name="fragment_signin_password">Contraseña</string>
    <string name="fragment_signin_remember_me">Recordarme</string>
    <string name="fragment_signin_forgot_password">¿Olvido su contraseña?</string>
    <string name="fragment_signin_login_button">Ingresar</string>
    <string name="fragment_signin_signup_button">REGISTRARSE</string>


    <string name="fragment_signup_username">Usuario</string>
    <string name="fragment_signup_password">Contraseña</string>
    <string name="fragment_signup_pswd_check">Reingresar contraseña</string>
    <string name="fragment_signup_forgot_password">¿Olvido su contraseña?</string>
    <string name="fragment_signup_create_button">Crear</string>


    <!-- Error messages -->
    <string name="msg_error_default">Error al procesar la solicitud</string>

</resources>